# green_book_site

./: .gitignore  README.md  data.txt  db.sqlite3  manage.py  pyproject.toml  requirements.txt
DIYProject/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
DIYProject/migrations/: 0001_initial.py  0002_alter_projectcategory_image_project.py  0003_alter_project_title.py  0004_project_tools.py  0005_alter_project_tools.py  0006_alter_project_title.py  0007_alter_project_title.py  0008_thought.py  0009_favourite.py  0010_project_upvotes.py
accounts/: forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile_created_at.py  0003_userprofile_time_zone.py
challenges/: urls.py  views.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
forum/: admin.py  forms.py  models.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_alter_question_body.py  0002_vote.py  0003_answer_answercomment_answervote.py  0004_remove_answer_title.py
green_book_app/: apps.py  middleware.py  urls.py  views.py
green_book_app/templatetags/: custom_filters.py
green_book_challenges/: admin.py  forms.py  models.py  urls.py  views.py
green_book_messenger/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
green_book_site/: asgi.py  settings.py  urls.py  wsgi.py
marketplace/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
marketplace/static/: add-product.js  (+3 more)
scripts/: install-poetry-linux.sh  install-poetry-mac.sh  install-poetry-windows.ps1
(+97 files in other folders)
