[tool.poetry]
name = "green-book-site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
channels = "^4.1.0"
daphne = "^4.1.2"
uuid = "^1.30"
django-ckeditor-5 = "^0.2.13"
django-enumfields = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
