[tool.poetry]
name = "green-book-site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-ckeditor-5 = "^0.2.13"
pytz = "^2024.1"
django-imagekit = "^5.0.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
